[package]
name = "cedar-solve-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray-linalg = "0.18"
ndarray-npy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
itertools = "0.10"
scirs2-stats = "0.1.0-rc.4"
anyhow = "1.0" # For error handling
ndarray = "0.17.1"
scirs2-spatial = "0.1.0-rc.4"

